[metadata]
name = tonalytica-client
version = 0.1.0
description = TONalytica API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tonalytica.redoubt.online/
keywords = TONalytica, redoubt, API
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
author = maksymds
author_email = redoubt@devnull.ae
project_urls = 
    Github = https://github.com/re-doubt/tonalytica-api-client
    Documentation =  https://docs.tonalytica.redoubt.online/

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    certifi==2019.9.11
    chardet==3.0.4
    idna==2.8
    requests==2.22.0
    urllib3==1.25.6
    click == 8.0.3

[options.packages.find]
exclude =
    devtools*
    docs*
    tests*
    venv*
